<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IdentifyLanguageActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_enter_languages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/identical_margin"
        android:hint="@string/enter_text_to_identify_language"
        android:inputType="textMultiLine"
        android:lines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_result"
        style="@style/ResultTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_enter_languages"
        tools:text="Result" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_identify_language"
            style="@style/ButtonTheme"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:text="@string/identify_likely_languages" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_show_all_possibility_language"
            style="@style/ButtonTheme"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:text="@string/show_all_possibilities" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>